--- a/index.html
+++ b/index.html
@@ -21,11 +21,47 @@
                 reprehenderit perspiciatis adipisci et.
             </p>
 
+            <div class="team-container">
+
+            </div>
+
             <section class="team-container">
                 <!-- Le schede del team saranno inserite qui tramite JavaScript -->
             </section>
         </div>
 
+    </section>
+
+
+
+    <section class="form-container ">
+        <h2>Add Team Member</h2>
+
+        <form id="member-form">
+
+            <div>
+                <input type="text" id="name" placeholder="Nome completo" required>
+            </div>
+
+            <div>
+                <input type="text" id="role" placeholder="Ruolo " required>
+            </div>
+
+            <div>
+                <input type="text" nid="image" placeholder="Url dell'imamgine" required>
+            </div>
+
+            <button type="submit">Aggiungi il membro ì</button>
+
+
+
+
+
+
+
+
+
+        </form>
     </section>
 
 </body>
