--- a/index.html
+++ b/index.html
@@ -22,14 +22,9 @@
             </p>
 
             <div class="team-container">
-
+                <!--creazione delle card-->
             </div>
-
-            <section class="team-container">
-                <!-- Le schede del team saranno inserite qui tramite JavaScript -->
-            </section>
         </div>
-
     </section>
 
 
